apps/ssh/terraform/security.tf
resource "aws_security_group" "ssh_portfolio" {
  name        = "ssh-portfolio"
  description = "Allow SSH portfolio and admin access"

  # Port 22 — SSH portfolio (public)
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Port 2222 — EC2 admin SSH
  ingress {
    from_port   = 2222
    to_port     = 2222
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ssh-portfolio"
  }
}
